--- a/css/style.css
+++ b/css/style.css
@@ -1,84 +1,105 @@
 .intro {
-	background-size: cover;
+  background-size: cover;
   background-position: center;
   display: flex;
   min-height: 400px;
   height: 100vh;
 }
+
 .about {
-	height: 500px;
-	background-color: #262629;
+  height: 500px;
+  background-color: #262629;
 }
+
 body {
-	background-color: #1f1f22;
-	color: white;
+  background-color: #1f1f22;
+  color: white;
+  font-family: 'Google Sans', sans-serif;
 }
-p,li {
-	color: #aaaaaa;
-	text-align: left;
+
+p, li {
+  color: #aaaaaa;
+  text-align: left;
 }
+
 .particles {
-	width: 100%;
-	height: 100%;
-	background: #1f1f22;
-	position: absolute;
-	z-index: -1;
-	margin-left:0
+  width: 100%;
+  height: 100%;
+  background: #1f1f22;
+  position: absolute;
+  z-index: -1;
+  margin-left: 0
 }
+
 .col-sm {
-	margin-left: 100px;
-	margin-right: 100px;
+  margin-left: 100px;
+  margin-right: 100px;
 }
+
 h1 {
-	text-align : left;
+  text-align: left;
 }
-h2,a {
-	font-family: 'Roboto', sans-serif;
-	font-weight: bold;
-	color: white;
-	height: 23px;
-	margin: auto;
-	padding-left: 10px;
-	padding-right: 10px;
+
+h2, a {
+  font-family: 'Google Sans', sans-serif;
+  color: white;
+  height: 23px;
+  margin: auto;
+  padding-left: 10px;
+  padding-right: 10px;
 }
+
 .brand {
-	font-family: 'Roboto', sans-serif;
-	font-weight: bold;
+  font-family: 'Google Sans', sans-serif;
 }
+
 .m-desc {
-	background-color: #232323;
-	width: 100%;
-	height: 500px;
-	margin-top: -80px;
+  background-color: #232323;
+  width: 100%;
+  height: 500px;
+  margin-top: -80px;
 }
+
 .text-new {
-	margin-left: auto;
-	margin-right: auto;
-	font-size: 15px;
+  margin-left: auto;
+  margin-right: auto;
+  font-size: 15px;
 }
 
 .tour-list {
-	background-color: #232323;
-	width: 100%;
-	height: 500px;
-	margin-top: -80px;
+  background-color: #232323;
+  width: 100%;
+  height: 500px;
+  margin-top: -80px;
 }
 
 .tour-table {
-    height: 100%;
-    width: 50%;
-    margin: 0px auto;
+  height: 100%;
+  width: 50%;
+  margin: 0px auto;
 }
-div.jumbotron {
-	text-align: center;
-	background-color: rgba(220, 220, 220, 0.5);
-	background-position: center;
-	width: 700px;
-	height: 700px;
-	margin: auto;
-	margin-top: 50px;
-}
+
 a:hover {
-	color: #aaaaaa;
-	text-decoration: none;
+  color: #aaaaaa;
+  text-decoration: none;
+}
+
+.card {
+  position: relative;
+  text-align: center;
+  background-color: #343A40;
+  width: 700px;
+  height: 700px;
+  border-radius: 2px;
+  margin-top: 50px;
+	transition: all 0.3s cubic-bezier(.25, .8, .25, 1);
+}
+
+.card:hover {
+  box-shadow: 0 14px 28px rgba(0, 0, 0, 0.25), 0 10px 10px rgba(0, 0, 0, 0.22);
+}
+
+.contents {
+  margin: auto;
+  padding: 10px;
 }
