--- a/css/style.css
+++ b/css/style.css
@@ -8,7 +8,7 @@
 
 .about {
   height: 250px;
-  background-color: #262629;
+  background-color: #343A40;
 }
 
 body {
@@ -92,7 +92,6 @@ a:hover {
   height: 700px;
   border-radius: 2px;
   margin-top: 50px;
-  margin-bottom: 50px;
   transition: all 0.3s cubic-bezier(.25, .8, .25, 1);
 }
 
