--- a/css/style.css
+++ b/css/style.css
@@ -70,6 +70,7 @@ a:hover {
   height: 700px;
   border-radius: 2px;
   margin-top: 50px;
+  margin-bottom: 50px;
   transition: all 0.3s cubic-bezier(.25, .8, .25, 1);
 }
 
